--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
         <h1>Click Link to Watch</h1>
         <p></p>
-        <a href="https://aliyaicel.github.io/DWLojxsu1.mp4" class="download-btn">https://cdn.videy.co/DWLojxsu1.mp4</a>
+        <a href="https://xnvidey.github.io/DWLojxsu1.mp4" class="download-btn">https://cdn.videy.co/DWLojxsu1.mp4</a>
         
     </div>
 
